apps/raw/production/payments-backend-production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neon-billboard
  namespace: payments-backend-production
  labels:
    app.kubernetes.io/name: neon-billboard
    naas.io/team: payments
    naas.io/env: production
spec:
  selector:
    app.kubernetes.io/name: neon-billboard
  ports:
    - port: 80
      targetPort: 8080
