apps/raw/production/payments-backend-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neon-billboard
  namespace: payments-backend-production
  labels:
    app.kubernetes.io/name: neon-billboard
    naas.io/team: payments
    naas.io/env: production
spec:
  ingressClassName: nginx
  rules:
    - host: neon-billboard-prod.naas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neon-billboard
                port:
                  number: 80
